# ros2-aerial-manipulator

./: LICENSE  README.md
gazebo_models/aruco_box/: model.config  model.sdf
gazebo_models/aruco_box/materials/scripts/: aruco_box.material
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/omx_moveit_pick_cpp/share/omx_moveit_pick_cpp/: package.bash  package.zsh
launch/: hardware.launch.py
log/: latest_build
omx_moveit_pick_cpp/: CMakeLists.txt  package.xml
omx_moveit_pick_cpp/launch/: aruco_pick_place.launch.py  pick_and_place.launch.py
omx_moveit_pick_cpp/scripts/: aruco_markers_node.py
omx_moveit_pick_cpp/src/: omx_grip_node.cpp  omx_moveit_pick_node.cpp
omx_real_pick/: CMakeLists.txt  package.xml
omx_real_pick/launch/: hardware.launch.py
omx_real_pick/scripts/: aruco_realsense.py  marker_scanner.py
omx_real_pick/src/: real_pick_node.cpp
test/: 0219  0219-2  0219-3  aruco  pink_node1
